--- a/superawesome-base/src/main/AndroidManifest.xml
+++ b/superawesome-base/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:supportsRtl="true">
         <activity
-            android:name="tv.superawesome.sdk.publisher.SAVideoActivity"
+            android:name="tv.superawesome.sdk.publisher.SAVideoAd"
             android:label="SAFullscreenVideoAd"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:configChanges="keyboardHidden|orientation|screenSize"/>
@@ -23,10 +23,6 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"
             android:excludeFromRecents="true"/>
-
-        <activity android:name="tv.superawesome.sdk.publisher.test.SingleTestActivity"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-            android:screenOrientation="portrait"/>
 
     </application>
 </manifest>
